--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "test": "start",
-    "dev": "nodemon index.js"
+    "dev": "nodemon --env-file=.env index.js"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
@@ -16,7 +16,6 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "connect-mongo": "^6.0.0",
-    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-session": "^1.19.0",
     "mongoose": "^9.1.5",
